creation flow modification done

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -310,10 +310,10 @@
   "EditListingWizard.saveNewDescription": "Next: Client ID",
   "EditListingWizard.saveNewFeatures": "Next: Location",
   "EditListingWizard.saveNewLocation": "Next: Pricing",
-  "EditListingWizard.saveNewAvailability": "Next: Photos",
+  "EditListingWizard.saveNewAvailability": "Next: Pricing",
   "EditListingWizard.saveNewPhotos": "Publish consultation",
   "EditListingWizard.saveNewPolicies": "Next: Location",
-  "EditListingWizard.saveNewPricing": "Next: Availability",
+  "EditListingWizard.saveNewPricing": "Publish",
   "EditListingWizard.tabLabelDescription": "Description",
   "EditListingWizard.tabLabelFeatures": "Yoga styles",
   "EditListingWizard.tabLabelAvailability": "Availability",
@@ -1232,7 +1232,7 @@
   "EditlistingAreaOfLawForm.addMore":"+ Add More",
   "EditListingWizard.saveNewAreaOfLaw":"Next: Duration",
   "EditListingWizard.saveEditAreaOfLaw": "Save Area Of Law",
-  "EditListingWizard.saveNewDuration":"Next: Pricing",
+  "EditListingWizard.saveNewDuration":"Next: Availability",
   "EditListingWizard.saveEditDuration": " Save Duration",
   "EditListingDurationPanel.listingTitle":"Duration",
   "EditListingDurationForm.durationLabel":"Enter duration",
@@ -1285,7 +1285,7 @@
   "EditListingDeadlineForm.deadlineInvalid":"Previous date not allowed",
   "EditListingDeadlineForm.deadlineRequired":"Deadline required",
   "EditListingWizard.saveEditExpiry":"Save Expiry",
-  "EditListingWizard.saveNewExpiry":"Next: Photos",
+  "EditListingWizard.saveNewExpiry":"Publish",
   "EditListingWizard.saveNewCustomOralAvailability":"Next: Expiry",
   "EditListingDurationPanel.title":"Duration"
 
