--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1279,6 +1279,9 @@
   "PromotionPage.title": "Promotion Page",
   "TopbarDesktop.promotionLink": "Promotion",
   "UserNav.PromotionPage": "Promotion",
+  "ServicesPage.title": "Service Page",
+  "UserNav.ServicesPage": "Services for me",
+  "TopbarDesktop.ServicesLink": "Services",
   "EditListingExpiryPanel.title": "Expiry",
   "EditListingWizard.tabLabelExpiry": "Expiry",
   "EditListingExpiryForm.subTitle": "Enter the date by which the consultation will be auto cloesd",
