default results removed

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1268,7 +1268,7 @@
   "SignupForm.clientTypePlaceholder": "Choose account type",
   "SignupForm.clientTypeLabel": "Register as",
   "ProfileSettingsForm.descriptionPlaceholder": "Descriptopn",
-  "UserResultCard.ListingProfileLink": "Book online consultation now",
+  "UserResultCard.ListingProfileLink": "Book Now",
   "ContactDetailsForm.otpRequired": "This field is required",
   "ProfileSettingsForm.stateLabel": "State",
   "ProfileSettingsForm.postalCodeLabel": "Postal Code",
