--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -473,8 +473,8 @@
   "ManageListingCard.closeListing": "Close consultation",
   "ManageListingCard.closedListing": "This consultation is closed and not visible on the marketplace.",
   "ManageListingCard.draftOverlayText": "{listingTitle} is a draft and can't be booked.",
-  "ManageListingCard.editListing": "Edit consultation",
-  "ManageListingCard.finishListingDraft": "Finish consultation",
+  "ManageListingCard.editListing": "Edit",
+  "ManageListingCard.finishListingDraft": "Finish",
   "ManageListingCard.manageAvailability": "Manage availability",
   "ManageListingCard.openListing": "Open consultation",
   "ManageListingCard.pendingApproval": "{listingTitle} is pending admin approval and can't be booked.",
@@ -753,6 +753,7 @@
   "ProfilePage.reviewsOfCustomerTitle": "Reviews from Teachers ({count})",
   "ProfilePage.reviewsOfProviderTitle": "Reviews from Practicioners ({count})",
   "ProfilePage.schemaTitle": "{name} | {siteTitle}",
+  "Profilepage.Booknow": "Book Now",
   "ProfileSettingsForm.addYourProfilePicture": "+ Add your profile picture…",
   "ProfileSettingsForm.addYourProfilePictureMobile": "+ Add",
   "ProfileSettingsForm.bioHeading": "Your profile bio",
