client id bug fix,vattype add

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -295,6 +295,7 @@
   "EditListingPricingPanel.listingPriceCurrencyInvalid": "Currency in teacher profile is different from the marketplace currency. You cannot edit the price.",
   "EditListingPricingPanel.listingTitle": "your sessions",
   "EditListingPricingPanel.title": "Pricing",
+  "EditListingPricingForm.vatinvalid": "Enter valid Vat Number",
   "EditListingClientIdPanel.title": "Client Id",
   "EditListingWizard.payoutModalInfo": "Almost done! In order to send you money, we need to know a bit more about you. Next, we will guide you through verifying your account. The details can also be edited from Account Setting page on Payout details tab. ",
   "EditListingWizard.payoutModalTitleOneMoreThing": "One more thing:",
@@ -1252,6 +1253,7 @@
   "EditListingWizard.saveEditClient": "Save Client ID",
   "EditListingWizard.saveNewClient": "Next: Pricing",
   "EditListingPricingForm.vatLabel": "Select VAT",
+  "EditListingPriceForm.vattype": "Vat type",
   "EditListingClientIdForm.subTitle": "This will make this consultation only visible for following client ID",
   "EditListingWizard.saveNewCustomOralPricing": "Next: Deadline",
   "EditListingDeadlineForm.subTitle": "Please select a date by which you can deliver this service",
