represent company added in signup page

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -779,12 +779,12 @@
   "ProfileSettingsPage.heading": "User profile",
   "ProfileSettingsPage.title": "User profile",
   "ProfileSettingsPage.viewProfileLink": "View your user profile",
-  "ProfilePageSideNav.generalInfo":"General Info",
-  "ProfilePageSideNav.jurisdiction":"Jurisdiction",
-  "ProfilePageSideNav.education":"Education",
-  "ProfilePageSideNav.practiceArea":"Practice Area and Industries",
-  "ProfilePageSideNav.availability":"Availabilities",
-  "ProfilePageSideNav.verification":"Verification",
+  "ProfilePageSideNav.generalInfo": "General Info",
+  "ProfilePageSideNav.jurisdiction": "Jurisdiction",
+  "ProfilePageSideNav.education": "Education",
+  "ProfilePageSideNav.practiceArea": "Practice Area and Industries",
+  "ProfilePageSideNav.availability": "Availabilities",
+  "ProfilePageSideNav.verification": "Verification",
   "ResponsiveImage.noImage": "No image",
   "ReviewForm.reviewContentLabel": "Leave a review",
   "ReviewForm.reviewContentPlaceholder": "Describe your experience…",
@@ -1304,5 +1304,9 @@
   "EditListingDurationPanel.title": "Duration",
   "BookingTimeForm.slotNotAvailableMessage": "This time slot is not available to book. Please choose another slot",
   "ActivityFeed.transitionCancelProvider": "The booking was cancelled by the lawyer.",
-  "ActivityFeed.transitionCancelCustomer": "The booking was cancelled by the customer."
+  "ActivityFeed.transitionCancelCustomer": "The booking was cancelled by the customer.",
+  "signupFormForm.companyNamePlaceholder": "Comapny name",
+  "signupFormForm.companyNameLabel": "Enter company name",
+  "SignupForm.companyNameRequired": "Company name required",
+  "SignupForm.representCompanyLabel": "I represent the company"
 }
