--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1258,7 +1258,7 @@
   "EditListingWizard.customOralSaveNewClient": "Next: Duration",
   "EditListingWizard.saveEditClient": "Save Client ID",
   "EditListingWizard.saveNewClient": "Next: Pricing",
-  "EditListingPricingForm.vatLabel": "Select VAT",
+  "EditListingPricingForm.vatLabel": "VAT percentage (%)",
   "EditListingPriceForm.vattype": "Vat type",
   "EditListingClientIdForm.subTitle": "This will make this consultation only visible for following client ID",
   "EditListingWizard.saveNewCustomOralPricing": "Next: Deadline",
@@ -1308,5 +1308,7 @@
   "signupFormForm.companyNamePlaceholder": "Comapny name",
   "signupFormForm.companyNameLabel": "Enter company name",
   "SignupForm.companyNameRequired": "Company name required",
-  "SignupForm.representCompanyLabel": "I represent the company"
+  "SignupForm.representCompanyLabel": "I represent the company",
+  "editlistingPricingForm.remove": "Reomove",
+  "editlistingPricingForm.addMore": "Add more"
 }
