exceptions updated,create delete remaining

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -782,7 +782,7 @@
   "ProfilePageSideNav.generalInfo": "General Info",
   "ProfilePageSideNav.jurisdiction": "Jurisdiction",
   "ProfilePageSideNav.education": "Education",
-  "ProfilePageSideNav.practiceArea": "Practice Area and Industries",
+  "ProfilePageSideNav.practiceArea": "Practice & Industries",
   "ProfilePageSideNav.availability": "Availabilities",
   "ProfilePageSideNav.verification": "Verification",
   "ResponsiveImage.noImage": "No image",
