Availability tab removed isting creation bug fixed

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1242,7 +1242,7 @@
   "EditlistingAreaOfLawForm.addMore": "+ Add More",
   "EditListingWizard.saveNewAreaOfLaw": "Next: Duration",
   "EditListingWizard.saveEditAreaOfLaw": "Save Area Of Law",
-  "EditListingWizard.saveNewDuration": "Next: Availability",
+  "EditListingWizard.saveNewDuration": "Next: Pricing",
   "EditListingWizard.saveEditDuration": " Save Duration",
   "EditListingDurationPanel.listingTitle": "Duration",
   "EditListingDurationForm.durationLabel": "Enter duration",
@@ -1261,7 +1261,8 @@
   "EditListingPricingForm.vatLabel": "VAT percentage (%)",
   "EditListingPriceForm.vattype": "Vat type",
   "EditListingClientIdForm.subTitle": "This will make this consultation only visible for following client ID",
-  "EditListingWizard.saveNewCustomOralPricing": "Next: Deadline",
+  "EditListingWizard.saveNewCustomServicePricing": "Next: Deadline",
+  "EditListingWizard.saveNewCustomOralPricing": "Next: Expiry",
   "EditListingDeadlineForm.subTitle": "Please select a date by which you can deliver this service",
   "EditListingDeadlinePanel.listingTitle": "Deadline",
   "EditListingDeadlinePanel.title": "Deadline",
