customer sign up page, profile page, account setting fix

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -492,9 +492,9 @@
   "ManageListingsPage.profileSettings": "User profile",
   "ManageListingsPage.queryError": "Query failed. Please try again.",
   "ManageListingsPage.title": "Manage your consultation",
-  "AppointmentPage.title":"View Appointments",
-  "AppointmentCard.confirmButton":"Confirm",
-  "AppointmentPage.yourAppointments":"Your Appointments",
+  "AppointmentPage.title": "View Appointments",
+  "AppointmentCard.confirmButton": "Confirm",
+  "AppointmentPage.yourAppointments": "Your Appointments",
   "AppoinmentPage.youHaveListings": "You have {count} {count, plural, one {listing} other {listings}}",
   "ManageListingsPage.youHaveListings": "You have {count} {count, plural, one {listing} other {listings}}",
   "MapPriceMarker.unsupportedPrice": "({currency})",
@@ -1315,7 +1315,7 @@
   "signupFormForm.companyNamePlaceholder": "Comapny name",
   "signupFormForm.companyNameLabel": "Enter company name",
   "SignupForm.companyNameRequired": "Company name required",
-  "SignupForm.representCompanyLabel": "I represent the company",
+  "SignupForm.representCompanyLabel": "I hereby certify that I am the legal representative as per this entity's by-laws",
   "editlistingPricingForm.remove": "Reomove",
   "editlistingPricingForm.addMore": "Add more",
   "EditListingAvailabilityForm.startDateLabel": "Start Date",
