--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1329,5 +1329,8 @@
   "MyAppointmentPage.pendingTabTitle": "Pending Confirmation",
   "MyAppointmentPage.upcomingTabTitle": "Upcoming",
   "MyAppointmentPage.completeTabTitle": "Complete",
-  "TopbarMobileMenu.myAppointment": "My appointments"
+  "TopbarMobileMenu.myAppointment": "My appointments",
+  "InboxPage.stateRescheduled": "Rescheduled",
+  "ActivityFeed.transitionRescheduleCustomer": "Rescheduled",
+  "ActivityFeed.transitionRescheduleProvider": "Rescheduled by provider"
 }
