--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -50,7 +50,7 @@
   "BookingBreakdown.baseUnitQuantity": "{unitPrice} * {quantity, number} {quantity, plural, one {hour} other {hours}}",
   "BookingBreakdown.bookingEnd": "Booking end",
   "BookingBreakdown.bookingStart": "Booking start",
-  "BookingBreakdown.commission": "Yogatime fee *",
+  "BookingBreakdown.commission": "Marketplace fee *",
   "BookingBreakdown.commissionFeeNote": "* The fee helps us run the platform and provide the best possible service to you!",
   "BookingBreakdown.dayCount": "{count, number} {count, plural, one {day} other {days}}",
   "BookingBreakdown.nightCount": "{count, number} {count, plural, one {night} other {nights}}",
@@ -97,6 +97,7 @@
   "BookingPanel.perUnit": "per hour",
   "BookingPanel.subTitleClosedListing": "Sorry, this teacher profile is not active anymore.",
   "BookingTimeForm.bookingEndTitle": "End date",
+  "BookingBreakdown.bookingStartLabel": "Start date",
   "BookingTimeForm.bookingStartTitle": "Pick a date",
   "BookingTimeForm.listingCurrencyInvalid": "Oops, the currency on the teacher profile doesn't match the currency of the marketplace.",
   "BookingTimeForm.listingPriceMissing": "Oops, this teacher profile has no price set!",
@@ -1105,6 +1106,7 @@
   "TransactionPanel.messageDeletedListing": "However, the teacher profile is deleted and cannot be viewed anymore.",
   "TransactionPanel.messageLoadingFailed": "Something went wrong when loading messages. Please refresh the page and try again.",
   "TransactionPanel.orderAcceptedSubtitle": "Your booking for {listingLink} has been accepted.",
+  "TransactionPanel.orderRescheduledSubtitle": "Your booking for {listingLink} has been rescheduled.",
   "TransactionPanel.orderAcceptedTitle": "Woohoo {customerName}!",
   "TransactionPanel.orderCancelledTitle": "{customerName}, your booking for {listingLink} has been cancelled.",
   "TransactionPanel.orderDeclinedTitle": "{customerName}, your booking for {listingLink} has been declined.",
@@ -1115,12 +1117,14 @@
   "TransactionPanel.orderPreauthorizedInfo": "{providerName} has been notified about the booking request. Sit back and relax while we wait {providerName} to get back to you.",
   "TransactionPanel.orderPreauthorizedSubtitle": "You have requested to book a session with {listingLink}.",
   "TransactionPanel.orderPreauthorizedTitle": "Great success, {customerName}!",
+  "TransactionPanel.orderRescheduledTitle": "Great {customerName}",
   "TransactionPanel.paymentMethodsPageLink": "payment methods page",
   "TransactionPanel.perDay": "per day",
   "TransactionPanel.perNight": "per night",
   "TransactionPanel.perUnit": "per hour",
   "TransactionPanel.requestToBook": "Request to book",
   "TransactionPanel.saleAcceptedTitle": "You accepted a request from {customerName} to book a session with you.",
+  "TransactionPanel.saleRescheduledTitle": "Rescheduled meeting.",
   "TransactionPanel.saleCancelledTitle": "The booking from {customerName} for a session with you has been cancelled.",
   "TransactionPanel.saleDeclinedTitle": "The request from {customerName} to book a session with you has been declined.",
   "TransactionPanel.saleDeliveredTitle": "The booking from {customerName} for a session with you has been completed.",
@@ -1319,7 +1323,7 @@
   "signupFormForm.companyNameLabel": "Enter company name",
   "SignupForm.companyNameRequired": "Company name required",
   "SignupForm.representCompanyLabel": "I hereby certify that I am the legal representative as per this entity's by-laws",
-  "editlistingPricingForm.remove": "Reomove",
+  "editlistingPricingForm.remove": "Remove",
   "editlistingPricingForm.addMore": "Add more",
   "EditListingAvailabilityForm.startDateLabel": "Start Date",
   "EditListingAvailabilityForm.endDateLabel": "End Date",
