inbox tab wording changed

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -395,8 +395,8 @@
   "InboxPage.noSalesFound": "Nobody has booked anything from you yet.",
   "InboxPage.ordersTabTitle": "Bookings",
   "InboxPage.ordersTitle": "Inbox: Bookings",
-  "InboxPage.salesTabTitle": "Teaching",
-  "InboxPage.salesTitle": "Inbox: Teaching",
+  "InboxPage.salesTabTitle": "Sales",
+  "InboxPage.salesTitle": "Inbox: Sales",
   "InboxPage.stateAccepted": "Accepted",
   "InboxPage.stateCanceled": "Canceled",
   "InboxPage.stateDeclined": "Declined",
@@ -520,7 +520,7 @@
   "NotFoundPage.title": "Page not found",
   "OwnListingLink.addYourListingLink": "Create consultation",
   "OwnListingLink.editYourListingLink": "Edit teacher profile",
-  "Page.schemaDescription": "Book private yoga lessons using Yogatime or earn some income teaching yoga",
+  "Page.schemaDescription": "Find Legal Advice Online. Find experienced lawyers you need. Anytime. Anywhere.",
   "Page.schemaTitle": "Book private yoga lessons everywhere | {siteTitle}",
   "PaginationLinks.next": "Next page",
   "PaginationLinks.previous": "Previous page",
