--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1253,7 +1253,7 @@
   "EditlistingAreaOfLawForm.addMore": "+ Add More",
   "EditListingWizard.saveNewAreaOfLaw": "Next: Duration",
   "EditListingWizard.saveEditAreaOfLaw": "Save Area Of Law",
-  "EditListingWizard.saveNewDuration": "Next: Pricing",
+  "EditListingWizard.saveNewDuration": "Next: Client-ID",
   "EditListingWizard.saveEditDuration": " Save Duration",
   "EditListingDurationPanel.listingTitle": "Duration",
   "EditListingDurationForm.durationLabel": "Enter duration",
@@ -1261,12 +1261,12 @@
   "EditListingDurationForm.durationInvalid": "Invalid duration",
   "EditListingDurationForm.durationPlaceholder": "Enter duration",
   "EditListingPriceForm.pricingLabel": "Price in USD",
-  "EditListingWizard.saveNewcustomOralDescription": "Next: Client ID",
+  "EditListingWizard.saveNewcustomOralDescription": "Next: Duration",
   "EditListingClientIdPanel.listingTitle": "Client",
   "EditListingClientIdForm.clientIdLabel": "Enter Client ID",
   "EditListingClientIdForm.clientIdPlaceholder": "Type client ID",
   "EditListingClientIdForm.clientIdRequired": "Client ID required",
-  "EditListingWizard.customOralSaveNewClient": "Next: Duration",
+  "EditListingWizard.customOralSaveNewClient": "Next: Pricing",
   "EditListingWizard.saveEditClient": "Save Client ID",
   "EditListingWizard.saveNewClient": "Next: Pricing",
   "EditListingPricingForm.vatLabel": "VAT percentage (%)",
