single and multiple filter added, initial alues remaining

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -471,6 +471,9 @@
   "LoginForm.passwordLabel": "Password",
   "LoginForm.passwordPlaceholder": "Enter your password…",
   "LoginForm.passwordRequired": "This field is required",
+  "ManageListingPage.categoryFilterElementLabel":"Category",
+  "ManageListingPage.statusFilterElementLabel":"Status",
+  "ManageListingPage.practiceAreaFilterElementLabel":"Practice Area",
   "ManageListingCard.actionFailed": "Whoops, something went wrong. Please refresh the page and try again.",
   "ManageListingCard.closeListing": "Close consultation",
   "ManageListingCard.closedListing": "This consultation is closed and not visible on the marketplace.",
