--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1235,10 +1235,11 @@
   "ProfilePage.education": "Education",
   "Topbar.createListing": "+ Create consultation",
   "UserNav.yourListings": "Manage Your Listings",
+  "UserNav.sales": "My sales",
   "UserNav.myAppointments": "My Appointments",
   "TopbarDesktop.manageListingsLink": "Manage your listings",
   "TopbarMobile.manageListingsLink": "Manage your listings",
-  "TopbarDesktop.appointmentsLink": "View appointments",
+  "TopbarDesktop.appointmentsLink": "My appointments",
   "EditListingWizard.tabLabelAreaOfLaw": "Area of Law",
   "EditListingWizard.tabLabelDuration": "Duration",
   "EditListingWizard.tabLabelClient": "Client ID",
