--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1062,25 +1062,26 @@
   "Topbar.menuIcon": "Open menu",
   "Topbar.mobileSearchHelp": "Tip: You can also search teachers by zip code, for example \"10012\" or city district - \"Manhattan\".",
   "Topbar.searchIcon": "Open search",
-  "TopbarDesktop.accountSettingsLink": "Account settings",
-  "TopbarDesktop.createListing": "+ Create consultation",
+  "TopbarDesktop.accountSettingsLink": "Account Settings",
+  "TopbarDesktop.createListing": "+ Create Consultation",
   "TopbarDesktop.addYourListingLink": "Become a teacher",
   "TopbarDesktop.editYourListingLink": "Edit teacher profile",
   "TopbarDesktop.inbox": "Inbox",
-  "TopbarDesktop.login": "Log in",
+  "TopbarDesktop.login": "Log In",
   "TopbarDesktop.logo": "Yogatime",
-  "TopbarDesktop.logout": "Log out",
-  "TopbarDesktop.profileSettingsLink": "User profile",
+  "TopbarDesktop.logout": "Log Out",
+  "TopbarDesktop.mysalesLink": "My Sales",
+  "TopbarDesktop.profileSettingsLink": "User Profile",
   "TopbarDesktop.signup": "Join as a Client",
   "TopbarDesktop.signupLawyer": "Join as a Lawyer",
   "TopbarDesktop.viewListing": "Teacher profile",
-  "TopbarMobileMenu.accountSettingsLink": "Account settings",
+  "TopbarMobileMenu.accountSettingsLink": "Account Settings",
   "TopbarMobileMenu.greeting": "Hello {displayName}",
   "TopbarMobileMenu.inboxLink": "Inbox",
-  "TopbarMobileMenu.loginLink": "Log in",
-  "TopbarMobileMenu.logoutLink": "Log out",
+  "TopbarMobileMenu.loginLink": "Log In",
+  "TopbarMobileMenu.logoutLink": "Log Out",
   "TopbarMobileMenu.newListingLink": "Join as a Client",
-  "TopbarMobileMenu.profileSettingsLink": "User profile",
+  "TopbarMobileMenu.profileSettingsLink": "User Profile",
   "TopbarMobileMenu.signupLink": "Sign up",
   "TopbarMobileMenu.signupOrLogin": "{signup} or {login}",
   "TopbarMobileMenu.unauthorizedGreeting": "Hello there,{lineBreak}would you like to {signupOrLogin}?",
@@ -1143,10 +1144,10 @@
   "UserCard.viewProfileLink": "View user profile",
   "UserDisplayName.banned": "Banned user",
   "UserDisplayName.deleted": "Deleted user",
-  "UserNav.newListing": "Create consultation/service",
+  "UserNav.newListing": "Create Consultation/Service",
   "UserNav.editListing": "Edit teacher profile",
-  "UserNav.profileSettingsPage": "Edit user profile",
-  "UserNav.contactDetailsPage": "Account settings",
+  "UserNav.profileSettingsPage": "Edit User Profile",
+  "UserNav.contactDetailsPage": "Account Settings",
   "signupFormForm.phonePlaceholder": "99999 55555",
   "SignupForm.phoneLabel": "Phone number",
   "SignupForm.phoneRequired": "You need to add a valid phone number",
@@ -1235,11 +1236,11 @@
   "ProfilePage.education": "Education",
   "Topbar.createListing": "+ Create consultation",
   "UserNav.yourListings": "Manage Your Listings",
-  "UserNav.sales": "My sales",
+  "UserNav.sales": "My Sales",
   "UserNav.myAppointments": "My Appointments",
-  "TopbarDesktop.manageListingsLink": "Manage your listings",
-  "TopbarMobile.manageListingsLink": "Manage your listings",
-  "TopbarDesktop.appointmentsLink": "My appointments",
+  "TopbarDesktop.manageListingsLink": "Manage Your Listings",
+  "TopbarMobile.manageListingsLink": "Manage Your Listings",
+  "TopbarDesktop.appointmentsLink": "My Appointments",
   "EditListingWizard.tabLabelAreaOfLaw": "Area of Law",
   "EditListingWizard.tabLabelDuration": "Duration",
   "EditListingWizard.tabLabelClient": "Client ID",
@@ -1303,7 +1304,7 @@
   "TopbarMobile.promotionLink": "Promotion",
   "UserNav.PromotionPage": "Promotion",
   "ServicesPage.title": "Service Page",
-  "UserNav.ServicesPage": "Services for me",
+  "UserNav.ServicesPage": "Services for Me",
   "TopbarDesktop.ServicesLink": "Services",
   "TopbarMobile.ServicesLink": "Services",
   "EditListingExpiryPanel.title": "Expiry",
