attorney of law fix, booking msgs fix, reschule client id null fix, sales card location hardcode fix, client icon removed

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -15,8 +15,9 @@
   "ActivityFeed.transitionComplete": "The booking was completed. { reviewLink }",
   "ActivityFeed.transitionDecline": "{ displayName } declined the booking request.",
   "ActivityFeed.transitionExpire": "Booking request expired. { displayName } did not reply on time.",
-  "ActivityFeed.transitionRequest": "{ displayName } requested to book a session with you.",
+  "ActivityFeed.transitionRequest": "{ displayName } have booked a session with you.",
   "ActivityFeed.transitionReview": "{ displayName } left a review for you. { reviewLink }",
+  "AppointmentCard.popupMessage":"You have received the consultation.",
   "AuthenticationPage.confirmSignupInfoText": "Please check that your information is correct.",
   "AuthenticationPage.confirmSignupWithIdpTitle": "Sign up with {idp}",
   "AuthenticationPage.emailAlreadyInUse": "An account with this email address already exists. Try logging in instead.",
@@ -1127,7 +1128,7 @@
   "TransactionPanel.perNight": "per night",
   "TransactionPanel.perUnit": "per hour",
   "TransactionPanel.requestToBook": "Request to book",
-  "TransactionPanel.saleAcceptedTitle": "You accepted a request from {customerName} to book a session with you.",
+  "TransactionPanel.saleAcceptedTitle": "Good News! You have received a booking from {customerName}.",
   "TransactionPanel.saleRescheduledTitle": "Rescheduled meeting.",
   "TransactionPanel.saleCancelledTitle": "The booking from {customerName} for a session with you has been cancelled.",
   "TransactionPanel.saleDeclinedTitle": "The request from {customerName} to book a session with you has been declined.",
