burger menu updated

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1087,8 +1087,10 @@
   "TopbarMobileMenu.newListingLink": "Join as a Client",
   "TopbarMobileMenu.profileSettingsLink": "User Profile",
   "TopbarMobileMenu.signupLink": "Sign up",
-  "TopbarMobileMenu.signupOrLogin": "{signup} or {login}",
-  "TopbarMobileMenu.unauthorizedGreeting": "Hello there,{lineBreak}would you like to {signupOrLogin}?",
+  "TopbarMobileMenu.signupLawyerLink": "Sign up as Lawyer",
+  "TopbarMobileMenu.signupClientLink": "Sign up as Client",
+  "TopbarMobileMenu.signupOrLogin":  "{lineBreak}{lineBreak}{signupClient}{lineBreak}{lineBreak}{signupLawyer}{lineBreak}{lineBreak}{login}",
+  "TopbarMobileMenu.unauthorizedGreeting": "Hello there,{lineBreak} What would you like to do:{lineBreak}",
   "TopbarMobileMenu.yourListingsLink": "Your teacher profile",
   "TopbarSearchForm.placeholder": "Search",
   "TopbarSearchForm.searchHelp": "Tip: You can also search teachers by zip code, for example \"10012\" or city district \"Manhattan\".",
