--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -17,7 +17,7 @@
   "ActivityFeed.transitionExpire": "Booking request expired. { displayName } did not reply on time.",
   "ActivityFeed.transitionRequest": "{ displayName } have booked a session with you.",
   "ActivityFeed.transitionReview": "{ displayName } left a review for you. { reviewLink }",
-  "AppointmentCard.popupMessage":"You have received the consultation.",
+  "AppointmentCard.popupMessage": "You have received the consultation.",
   "AuthenticationPage.confirmSignupInfoText": "Please check that your information is correct.",
   "AuthenticationPage.confirmSignupWithIdpTitle": "Sign up with {idp}",
   "AuthenticationPage.emailAlreadyInUse": "An account with this email address already exists. Try logging in instead.",
@@ -472,9 +472,9 @@
   "LoginForm.passwordLabel": "Password",
   "LoginForm.passwordPlaceholder": "Enter your password…",
   "LoginForm.passwordRequired": "This field is required",
-  "ManageListingPage.categoryFilterElementLabel":"Category",
-  "ManageListingPage.statusFilterElementLabel":"Status",
-  "ManageListingPage.practiceAreaFilterElementLabel":"Practice Area",
+  "ManageListingPage.categoryFilterElementLabel": "Category",
+  "ManageListingPage.statusFilterElementLabel": "Status",
+  "ManageListingPage.practiceAreaFilterElementLabel": "Practice Area",
   "ManageListingCard.actionFailed": "Whoops, something went wrong. Please refresh the page and try again.",
   "ManageListingCard.closeListing": "Close consultation",
   "ManageListingCard.closedListing": "This consultation is closed and not visible on the marketplace.",
@@ -1344,5 +1344,9 @@
   "InboxPage.stateRescheduled": "Rescheduled",
   "ActivityFeed.transitionRescheduleCustomer": "Rescheduled",
   "ActivityFeed.transitionRescheduleProvider": "Rescheduled by provider",
-  "InboxPage.statePendingConfirmation": "Pending Confirmation"
+  "InboxPage.statePendingConfirmation": "Pending Confirmation",
+  "InboxPage.stateCustomerJoined": "Customer Joined",
+  "InboxPage.stateProviderJoined": "Provider Joined",
+  "InboxPage.stateBothJoined": "Meeting Started",
+  "InboxPage.stateMeetingExpired": "Meeting Expired"
 }
