booking messages, headings fixed, verification tab added in mysales

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -6,7 +6,7 @@
   "ActivityFeed.ownTransitionAccept": "You accepted the booking request.",
   "ActivityFeed.ownTransitionDecline": "You declined the booking request.",
   "ActivityFeed.ownTransitionExpire": "Booking request expired. You did not reply on time.",
-  "ActivityFeed.ownTransitionRequest": "You requested to book { listingTitle }.",
+  "ActivityFeed.ownTransitionRequest": "You have booked { listingTitle }.",
   "ActivityFeed.ownTransitionReview": "You left a review for { displayName }.",
   "ActivityFeed.showOlderMessages": "Show older",
   "ActivityFeed.today": "Today",
@@ -1112,7 +1112,7 @@
   "TransactionPanel.initialMessageFailed": "Whoops, failed to send message from checkout.",
   "TransactionPanel.messageDeletedListing": "However, the teacher profile is deleted and cannot be viewed anymore.",
   "TransactionPanel.messageLoadingFailed": "Something went wrong when loading messages. Please refresh the page and try again.",
-  "TransactionPanel.orderAcceptedSubtitle": "Your booking for {listingLink} has been accepted.",
+  "TransactionPanel.orderAcceptedSubtitle": "You have successfully booked {listingLink}.",
   "TransactionPanel.orderRescheduledSubtitle": "Your booking for {listingLink} has been rescheduled.",
   "TransactionPanel.orderAcceptedTitle": "Woohoo {customerName}!",
   "TransactionPanel.orderCancelledTitle": "{customerName}, your booking for {listingLink} has been cancelled.",
@@ -1327,6 +1327,9 @@
   "BookingTimeForm.slotNotAvailableMessage": "This time slot is not available to book. Please choose another slot",
   "ActivityFeed.transitionCancelProvider": "The booking was cancelled by the lawyer.",
   "ActivityFeed.transitionCancelCustomer": "The booking was cancelled by the customer.",
+  "ActivityFeed.meetingExpired":"The meeting has ended",
+  "ActivityFeed.customerJoined":"The customer has joined",
+  "ActivityFeed.providerJoined":"The provider has joined",
   "signupFormForm.companyNamePlaceholder": "Comapny name",
   "signupFormForm.companyNameLabel": "Enter company name",
   "SignupForm.companyNameRequired": "Company name required",
@@ -1341,6 +1344,7 @@
   "MyAppointmentPage.pendingTabTitle": "Pending Confirmation",
   "MyAppointmentPage.upcomingTabTitle": "Upcoming",
   "MyAppointmentPage.completeTabTitle": "Complete",
+  "MyAppointmentPage.verificationTabTitle": "Verification",
   "TopbarMobileMenu.myAppointment": "My appointments",
   "FieldDateAndTimeInputService.startDateLabel": "Start Date",
   "InboxPage.stateRescheduled": "Rescheduled",
